@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.569 2006/01/07 22:59:06 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.570 2006/01/07 23:02:22 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -12,6 +12,7 @@
   src/GLIArchitectureTemplate.py:
   copy /etc/X11/gdm/gdm.conf.old into chroot if /etc/X11/gdm/gdm.conf exists
   in the chroot
+  remove _quickpkg_deps() and _portage_best_{visible,version}()
   src/GLIUtility.py:
   fail immediately in validate_uri() if provided URI can't be parsed
   src/templates/x86ArchitectureTemplate.py:
